Zwischenstand Auftragslisten und Meldungsanzeige

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+# No Swap-Files
+*.swp
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
