ignore tags file

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
-# No Swap-Files
+tags
 *.swp
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
