--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,9 @@ tags
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
-config/secrets.yml
 config/ldap.yml
+config/resource_servers.yml
+config/secrets.yml
 
 ## Environment normalisation:
 /.bundle
