--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ config/secrets.yml
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
+
+# External libs loaded via rake assets:libs
+lib/assets/javascripts
+lib/assets/stylesheets
