Move global configurattion into own ```Settings``` class configurable from ```global``` block within ```config/settings.yml```

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ config/initializers/secret_token.rb
 config/ldap.yml
 config/resource_servers.yml
 config/secrets.yml
+config/settings.yml
 
 ## Environment normalisation:
 /.bundle
