--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -1,2 +1,11 @@
 global:
   ks_frontend_search_url: http://demo.klarschiff.de/search
+
+ldap:
+  host: klarschiff-test
+  username: uid=admin
+  password: admin
+  port: 389
+    users: ou=users,ou=klarschiff,ou=SV
+    groups: ou=groups,ou=klarschiff,ou=SV
+  group_search_pattern: (&(objectClass=groupOfNames)(o=groupname)(member=%s))
