Konfiguration für Resource-Servers in die settings.yml verschoben

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -9,3 +9,9 @@ ldap:
     users: ou=users,ou=klarschiff,ou=SV
     groups: ou=groups,ou=klarschiff,ou=SV
   group_search_pattern: (&(objectClass=groupOfNames)(o=<groupname>)(member=%s))
+
+resource_servers:
+  city_sdk:
+    site: https://klarschiff-test/citysdk/
+    format: :json
+    api_key: <API-Key>
