--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "app/assets/images/icons"]
 	path = app/assets/images/icons
-	url = git@github.com:rostock/klarschiff-icons.git
+	url = https://github.com/rostock/klarschiff-icons.git
