Clientseitige Einschränkung der erlaubten Status (Fix Redmine 627)

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -57,5 +57,11 @@ map:
     initial: 2
     max: 10
 
+request:
+  permissable_states:
+    - IN_PROCESS
+    - PROCESSED
+    - REJECTED
+
 auto_refresh:
   timeout: 60000
