von WMS auf WMTS umgestellt

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -32,13 +32,20 @@ protocol_mail:
 
 map:
   default_requests_states: PENDING, RECEIVED, IN_PROCESS, PROCESSED, REJECTED
-  center: [313356.88711652, 6002555.7959791]
-  extent: [304094, 5993070, 323567, 6014340]
-  wms_tile_layers:
+  center: [312900, 5997281]
+  mv_bbox_25833: [206885, 5890624, 460857, 6060841]
+  extent: [271264, 5938535, 356804, 6017573]
+  wmts_layers:
     -
+      url: http://www.orka-mv.de/geodienste/orkamv/wmts/orkamv/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       content: orkamv
-      url: http://www.orka-mv.de/geodienste/orkamv/wms?
-      format: image/png
+      matrix_set: epsg_25833
+      format: png
+      request_encoding: REST
+      tilegrid_origin: [-464849.38, 6310160.14]
+      resolutions: [27.024570517098006, 19.109257071294042, 13.512285258549001, 9.55462853564702, 6.7561426292745, 4.77731426782351, 3.3780713146372494, 2.3886571339117544, 1.6890356573186245, 1.1943285669558772, 0.8445178286593122, 0.5971642834779384, 0.422258914329656, 0.29858214173896913, 0.21112945716482798, 0.14929107086948457]
+      matrix_ids: [15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
+      extent: [271264, 5938535, 356804, 6017573]
       visible: true
       attribution: >
         Kartenbild © Hansestadt Rostock
@@ -47,25 +54,32 @@ map:
         (<a href="http://opendatacommons.org/licenses/odbl/" target="_blank" style="color: #006CB7; text-decoration: none;">ODbL</a>)
         und <a href="https://geo.sv.rostock.de/uvgb.html" target="_blank" style="color: #006CB7; text-decoration:none;">uVGB-MV</a>
     -
+      url: http://geo.sv.rostock.de/geodienste/luftbild_mv-40/wmts/hro.luftbild_mv-40.luftbild_mv-40/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       content: hro.luftbild_mv-40.luftbild_mv-40
-      url: http://geo.sv.rostock.de/geodienste/luftbild_mv-40/wms?
-      format: image/png
+      matrix_set: epsg_25833
+      format: png
+      request_encoding: REST
+      tilegrid_origin: [-464849.38, 6310160.14]
+      resolutions: [27.024570517098006, 19.109257071294042, 13.512285258549001, 9.55462853564702, 6.7561426292745, 4.77731426782351, 3.3780713146372494, 2.3886571339117544, 1.6890356573186245, 1.1943285669558772, 0.8445178286593122, 0.5971642834779384, 0.422258914329656, 0.29858214173896913, 0.21112945716482798, 0.14929107086948457]
+      matrix_ids: [15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
+      extent: [271264, 5938535, 356804, 6017573]
       visible: false
       attribution: © GeoBasis-DE/M-V
-  wms_image_layers:
+  wms_layers:
     -
-      content: hro.klarschiff-poi.abfallbehaelter,hro.klarschiff-poi.ampeln,hro.klarschiff-poi.beleuchtung,hro.klarschiff-poi.brunnen,hro.klarschiff-poi.denkmale,hro.klarschiff-poi.hundetoiletten,hro.klarschiff-poi.recyclingcontainer,hro.klarschiff-poi.sitzgelegenheiten,hro.klarschiff-poi.sperrmuelltermine
       url: http://geo.sv.rostock.de/geodienste/klarschiff-poi/wms?
+      projection: EPSG:25833
+      content: hro.klarschiff-poi.abfallbehaelter,hro.klarschiff-poi.ampeln,hro.klarschiff-poi.beleuchtung,hro.klarschiff-poi.brunnen,hro.klarschiff-poi.denkmale,hro.klarschiff-poi.hundetoiletten,hro.klarschiff-poi.recyclingcontainer,hro.klarschiff-poi.sitzgelegenheiten,hro.klarschiff-poi.sperrmuelltermine
       format: image/png
+      extent: [271264, 5938535, 356804, 6017573]
       visible: true
-      max_resolution: 1100
   tracking_options:
     enable_high_accuracy: true
     timeout: 3000
     maximum_age: 5000
   zoom:
-    initial: 2
-    max: 10
+    initial: 8
+    max: 15
 
 request:
   permissable_states:
