--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -1,5 +1,6 @@
 urls:
   ks_frontend_search_url: http://demo.klarschiff.de/search
+  ks_frontend_url: http://demo.klarschiff-hro.de/
   ks_backend_vorgang_url: http://demo.klarschiff.de/vorgang/%s
 
 client:
