--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -1,8 +1,8 @@
 urls:
-  ks_frontend_search_url: http://demo.klarschiff.de/search
-  ks_frontend_url: http://demo.klarschiff-hro.de/
-  ks_frontend_imprint_url: http://demo.klarschiff-hro.de/impressum.php
-  ks_backend_vorgang_url: http://demo.klarschiff.de/vorgang/%s
+  ks_frontend_search_url: https://demo.klarschiff.de/search
+  ks_frontend_url: https://demo.klarschiff-hro.de/
+  ks_frontend_imprint_url: https://demo.klarschiff-hro.de/impressum.php
+  ks_backend_vorgang_url: https://demo.klarschiff.de/vorgang/%s
 
 client:
   login_required: true
