--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -73,7 +73,7 @@ map:
         (<a rel="license" href="http://opendatacommons.org/licenses/odbl" target="_blank" style="color: #006CB7; text-decoration: none;">ODbL</a>)
         und LkKfS-MV
     -
-      url: http://geo.sv.rostock.de/geodienste/luftbild_mv-40/wmts/hro.luftbild_mv-40.luftbild_mv-40/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
+      url: https://geo.sv.rostock.de/geodienste/luftbild_mv-40/wmts/hro.luftbild_mv-40.luftbild_mv-40/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       content: hro.luftbild_mv-40.luftbild_mv-40
       matrix_set: epsg_25833
       format: png
@@ -86,7 +86,7 @@ map:
       attribution: © GeoBasis-DE/M-V
   wms_layers:
     -
-      url: http://geo.sv.rostock.de/geodienste/klarschiff-poi/wms?
+      url: https://geo.sv.rostock.de/geodienste/klarschiff-poi/wms?
       projection: EPSG:25833
       content: hro.klarschiff-poi.abfallbehaelter,hro.klarschiff-poi.ampeln,hro.klarschiff-poi.beleuchtung,hro.klarschiff-poi.brunnen,hro.klarschiff-poi.denkmale,hro.klarschiff-poi.hundetoiletten,hro.klarschiff-poi.recyclingcontainer,hro.klarschiff-poi.sitzgelegenheiten,hro.klarschiff-poi.sperrmuelltermine
       format: image/png
