--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ rerun.txt
 pickle-email-*.html
 tags
 *.swp
+*.swo
+*~
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
