--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ tags
 *.swp
 *.swo
 *~
+*.pid
+*.pid.*
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
