--- a/config/libs.yml
+++ b/config/libs.yml
@@ -1,6 +1,7 @@
 versions:
   ol: v3.4.0
   proj4: 2.3.3
+  vertical_tabs: 1.2.2
 
 javascripts:
   OpenLayers.js: http://openlayers.org/en/<%= versions[:ol] %>/build/ol-debug.js
@@ -13,5 +14,5 @@ javascripts:
 stylesheets:
   OpenLayers.css: https://raw.githubusercontent.com/openlayers/ol3/<%= versions[:ol] %>/css/ol.css
   OpenLayers.min.css: http://openlayers.org/en/<%= versions[:ol] %>/css/ol.css
-  bootstrap.vertical-tabs.css: https://github.com/dbtek/bootstrap-vertical-tabs/raw/master/bootstrap.vertical-tabs.css
-  bootstrap.vertical-tabs.min.css: https://github.com/dbtek/bootstrap-vertical-tabs/raw/master/bootstrap.vertical-tabs.min.css
+  bootstrap.vertical-tabs.css: https://github.com/dbtek/bootstrap-vertical-tabs/raw/<%= versions[:vertical_tabs] %>/bootstrap.vertical-tabs.css
+  bootstrap.vertical-tabs.min.css: https://github.com/dbtek/bootstrap-vertical-tabs/raw/<%= versions[:vertical_tabs] %>/bootstrap.vertical-tabs.min.css
