Konfiguration zum rendern statischer Seiten (z.B. API, Impressum)

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -8,6 +8,7 @@ client:
   key: hro
   login_required: true
   name: Klarschiff.HRO
+  resources_path: /www/html/resources
   show_email:
   show_abuses:
   show_votes:
