--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -13,7 +13,9 @@ client:
   key: hro
   login_required: true
   multi_requests_enabled: true
-  name: Klarschiff.HRO
+  name: Klarschiff
+  city_long: Universitätsstadt Muggensturm
+  city_short: Muggensturm
   resources_path: /var/www/html/hro/resources
   logo_url: /resources/images/logo.png
   show_email:
@@ -26,6 +28,7 @@ client:
   show_protocol:
   show_notes:
   show_trust:
+  additional_content:
 
 vote:
   min_requirement: 20
