mehr Flexibilität bei übergebenen LDAP-Attributen der HTTP-Basic-Authentication des Webservers; settings.sample.yml korrigiert

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -29,7 +29,7 @@ client:
   show_protocol:
   show_notes:
   show_trust:
-  additional_content:
+  additional_content: false
 
 vote:
   min_requirement: 20
