aus Hansestadt Rostock wird Hanse- und Universitätsstadt Rostock

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -81,7 +81,7 @@ map:
       extent: [271264, 5938535, 356804, 6017573]
       visible: true
       attribution: >
-        Kartenbild © Hansestadt Rostock
+        Kartenbild © Hanse- und Universitätsstadt Rostock
         (<a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.de" target="_blank" style="color: #006CB7; text-decoration:none;">CC BY 4.0</a>) |
         Kartendaten © <a href="http://www.openstreetmap.org" target="_blank" style="color: #006CB7; text-decoration: none;">OpenStreetMap</a>
         (<a rel="license" href="http://opendatacommons.org/licenses/odbl" target="_blank" style="color: #006CB7; text-decoration: none;">ODbL</a>)
