--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -18,6 +18,7 @@ client:
   city_long: Universitätsstadt Muggensturm
   city_short: Muggensturm
   resources_path: /var/www/html/hro/resources
+  resources_overview_path: /pfad/zu/resources/overview
   logo_url: /resources/images/logo.png
   show_email:
   show_abuses:
