Rubrik -Was passt nicht in Klarschiff.HRO?- der Startseite erweitert; Gemset-Name angepasst

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -8,6 +8,8 @@ urls:
   ks_github_url: https://github.com/bfpi/klarschiff-field_service
   font_origin_url: https://www.paratype.com
   font_license_url: /resources/fonts/license.txt
+  not_content_two_url: https://polizei.mvnet.de/ssl/g8wache/cmswem/index.php?task=iw_anzeige
+  not_content_three_url: http://rathaus.rostock.de/sixcms/detail.php?template=seite_umweltamt_wasser_boden_alarmdienst_de&_sid1=&_sid2=rostock_01.c.198934.de&_sid3=39237&_sid4=39245
 
 client:
   animate_refresh: 10
