--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -75,6 +75,7 @@ map:
     -
       url: https://www.orka-mv.de/geodienste/orkamv/wmts/orkamv/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       content: orkamv
+      content_statistics: orkamv-graustufen
       matrix_set: epsg_25833
       format: png
       request_encoding: REST
