--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -74,6 +74,7 @@ map:
   wmts_layers:
     -
       url: https://www.orka-mv.de/geodienste/orkamv/wmts/orkamv/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
+      url_statistics: https://www.orka-mv.de/geodienste/orkamv/wmts/orkamv-graustufen/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       content: orkamv
       content_statistics: orkamv-graustufen
       matrix_set: epsg_25833
