--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -21,6 +21,7 @@ client:
   resources_url: https://demo.klarschiff.de/resources/
   resources_overview_path: /srv/www/htdocs/klarschiff_resources/requests/
   logo_url: /resources/images/logo.png
+  observations_area_limit: 35
   show_email:
   show_abuses:
   show_votes:
