--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ lib/assets/stylesheets
 
 #solr-Konfiguration
 public/search/conf/config.php
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
