Fertigstellung statische Meldungsliste
Durch Aufruf der `requests_url` wird ein Cache der Meldungsliste unter
`public/static/requests` gerendert und abgelegt. Beim Aufruf auf einer
dieser statischen Seiten wird diese automatisch durch den Apache / NGINX
ausgeliefert.

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,8 @@ lib/assets/stylesheets
 #solr-Konfiguration
 public/search/conf/config.php
 
+# Cache für statische Meldungsliste
+public/static/
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
