--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -83,6 +83,7 @@ map:
   extent: [271264, 5938535, 356804, 6017573]
   wmts_layers:
     -
+      id: orkamv
       url: https://www.orka-mv.de/geodienste/orkamv/wmts/orkamv/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       url_statistics: https://www.orka-mv.de/geodienste/orkamv/wmts/orkamv-graustufen/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       content: orkamv
@@ -103,6 +104,7 @@ map:
         (<a rel="license" href="http://opendatacommons.org/licenses/odbl" target="_blank" style="color: #006CB7; text-decoration: none;">ODbL</a>)
         und LkKfS-MV
     -
+      id: luftbilder
       url: https://geo.sv.rostock.de/geodienste/luftbild_mv-20/wmts/hro.luftbild_mv-20.luftbild_mv-20/{TileMatrixSet}/{TileMatrix}/{TileCol}/{TileRow}.png
       content: hro.luftbild_mv-20.luftbild_mv-20
       matrix_set: epsg_25833
@@ -116,6 +118,7 @@ map:
       attribution: © GeoBasis-DE/M-V
   wms_layers:
     -
+      id: pois
       url: https://geo.sv.rostock.de/geodienste/klarschiff-poi/wms?
       projection: EPSG:25833
       content: hro.klarschiff-poi.abfallbehaelter,hro.klarschiff-poi.ampeln,hro.klarschiff-poi.beleuchtung,hro.klarschiff-poi.brunnen,hro.klarschiff-poi.denkmale,hro.klarschiff-poi.hundetoiletten,hro.klarschiff-poi.recyclingcontainer,hro.klarschiff-poi.sitzgelegenheiten,hro.klarschiff-poi.sperrmuelltermine,hro.klarschiff-poi.gemeinde-hro-invers
