--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@ tags
 config/initializers/secret_token.rb
 config/ldap.yml
 config/resource_servers.yml
-config/secrets.yml
-config/settings.yml
+
+overlay/*
 
 ## Environment normalisation:
 /.bundle
